===================================
Rubine Lite Changelog
===================================

Version 1.0.7
-----------------------------------
[added] unminified version of html5shiv.min.js

Version 1.0.6
-----------------------------------
[improved] styling of blockquotes
[updated] to Genericon Font 3.3 and added new twitch and spotify icons
[fixed] wrong translation textdomain in some files
[fixed] ampersand escape bug in pagination links (https://core.trac.wordpress.org/ticket/30831)

Version 1.0.5
-----------------------------------
[changed] structure and organization of theme files for the Customizer
[improved] usage of proper sanitization functions for data validation
[updated] rubine.pot language file
[fixed] line height bug for pre and code HTML tags

Version 1.0.4
-----------------------------------
[added] theme option to display excerpt more text
[added] theme option to display featured image on single posts
[added] improved way to set sane defaults for theme options
[changed] styling of featured content area

Version 1.0.3
-----------------------------------
[added] sanitize_callback functions for all theme settings
[changed] post layout and postmeta for single posts
[fixed] styling for archive posts without featured image

Version 1.0.2
-----------------------------------
[added] new customizer panel for theme options
[moved] all theme settings and sections to the new panel
[fixed] styling of search field for Safari
[added] option to display social icons on footer line

Version 1.0.1
-----------------------------------
[fixed] set content_width in theme setup function

Version 1.0
-----------------------------------
Final Version